--- a/package.json
+++ b/package.json
@@ -13,20 +13,32 @@
     "prettier": "prettier --write \"**/*.{cls,cmp,component,css,html,js,json,md,page,trigger,xml,yaml,yml}\"",
     "prettier:verify": "prettier --check \"**/*.{cls,cmp,component,css,html,js,json,md,page,trigger,xml,yaml,yml}\"",
     "postinstall": "husky install",
-    "precommit": "lint-staged"
+    "precommit": "lint-staged",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^1.9.0",
     "@lwc/eslint-plugin-lwc": "^1.1.2",
     "@prettier/plugin-xml": "^3.2.2",
     "@salesforce/eslint-config-lwc": "^3.2.3",
     "@salesforce/eslint-plugin-aura": "^2.0.0",
     "@salesforce/eslint-plugin-lightning": "^1.0.0",
     "@salesforce/sfdx-lwc-jest": "^5.1.0",
+    "@storybook/addon-essentials": "^8.3.4",
+    "@storybook/addon-links": "^8.3.4",
+    "@storybook/addon-webpack5-compiler-swc": "^1.0.5",
+    "@storybook/blocks": "^8.3.4",
+    "@storybook/test": "^8.3.4",
+    "@storybook/web-components": "^8.3.4",
+    "@storybook/web-components-webpack5": "^8.3.4",
     "eslint": "^9.9.1",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jest": "^28.8.1",
+    "eslint-plugin-storybook": "^0.9.0",
     "husky": "^9.1.5",
     "lint-staged": "^15.1.0",
+    "lit": "^3.2.0",
     "prettier": "^3.1.0",
     "prettier-plugin-apex": "^2.0.1"
   },
@@ -36,6 +48,16 @@
     ],
     "**/{aura,lwc}/**/*.js": [
       "eslint"
+    ]
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e",
+  "dependencies": {
+    "storybook": "^8.3.4",
+    "web-component-analyzer": "^2.0.0"
+  },
+  "eslintConfig": {
+    "extends": [
+      "plugin:storybook/recommended"
     ]
   }
 }
